[package]
name = "msi_klm"
version = "0.2.0"
authors = ["Roland Ruckerbauer <roland.rucky@gmail.com>"]
repository = "https://github.com/ruabmbua/msi_klm"
description = "MSI keyboard light manager library and utility"
license = "LGPL-3.0+"
keywords = ["MSI", "KLM", "keyboard", "light", "manager"]

[dependencies]
hidapi = "0.2.0"
getopts = "0.2.12"
