[package]
authors = ["Roland Ruckerbauer <roland.rucky@gmail.com>"]
description = "MSI keyboard light manager library and utility"
keywords = [
    "MSI",
    "KLM",
    "keyboard",
    "light",
    "manager",
    "GUI",
]
license = "LGPL-3.0+"
name = "msi_klm"
repository = "https://github.com/ruabmbua/msi_klm"
version = "1.0.0"

[dependencies]
app_dirs = "1.1.1"
getopts = "0.2.12"
hidapi = "0.4.1"
libc = "*"
serde = "1.0.21"
serde_derive = "1.0.21"
serde_json = "1.0.6"

[dependencies.gtk]
features = ["v3_20"]
optional = true
version = "0.2.0"

[dependencies.gdk]
version = "*"
optional = true

[features]
default = ["gui"]
gui = ["gtk", "gdk"]

[patch.crates-io.hidapi]
git = "https://github.com/ruabmbua/hidapi-rs.git"
